Use server.dir.base instead of hard-coded /srv/robophery

--- a/robophery/files/robophery-manager.service
+++ b/robophery/files/robophery-manager.service
@@ -1,4 +1,4 @@
-{%- from "robophery/map.jinja" import server with context %}
+{%- from "robophery/map.jinja" import server with context -%}
 
 [Unit]
 Description=robophery manager
