Remove salt-master and reclass dependencies
Change-Id: Iab7878121c6d9949c89457bd69dbccd8f385a372

--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,6 @@ Vcs-Git: https://github.com/tcpcloud/salt-formula-robophery.git
 
 Package: salt-formula-robophery
 Architecture: all
-Depends: ${misc:Depends}, salt-master, reclass
+Depends: ${misc:Depends}
 Description: robophery salt formula
  Install and configure robophery system.
